traces/bug_852.txt
examples++-load/iovtk.cpp:2734: error: DEAD_STORE
  The value written to &label (type int) is never used.
Showing all 1 steps of the trace


examples++-load/iovtk.cpp:2734:7: Write of unused value
2732.         int type=TypeCells[i];
2733.         int ivb[3],ivt[4];
2734.         int label=1;
              ^
2735.         switch(type){
2736.         case 1:  // Vertex
